--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.2",
     "google-auth-library": "^7.9.2",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
